# memes-api

./: .coverage  .dependabotbot.json  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  docker_build.sh  jsconfig.json  justfile  package.json  pnpm-lock.yaml  pyproject.toml  update_images.sh  vitest.config.js
.github/: CONTRIBUTING.md
.github/workflows/: build_container.yml  dependabot_auto_merge.yml  js-tests.yml  mypy.yml  pylint.yml  pytest.yml
memes_api/: __init__.py  __main__.py  config.py  constants.py  healthcheck.py  image_cleanup.py  index.html  models.py  s3_utils.py  sessions.py  utils.py
memes_api/css/: memesapi.css
memes_api/js/: memesapi-utils.js  memesapi.js
memes_api/templates/: admin.html  basetemplate.html  error.html  footer.html  index.html  logout.html  navbar.html  view_image.html
tests/: test_click.py  test_config.json  test_config.py  test_endpoints.py  test_healthcheck.py  test_homepage.py  test_pillow.py  test_review_findings.py
tests/js/: memesapi.test.js
