[tool.poetry]
name = "memes-api"
version = "0.0.3"
description = "A memes API"
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^11.0.0"
fastapi = "^0.115.6"
uvicorn = "0.32.1"
pydantic = "^2.10.3"
Jinja2 = "^3.1.4"
click = "^8.1.7"
types-Pillow = "^10.2.0"
aiobotocore = "^2.1.2"
aioboto3 = "^9.4.0"

[tool.poetry.dev-dependencies]
pylint = "^3.3.2"
pytest = "^8.3.4"
mypy = "^1.13"
black = "^24.10.0"
pylint-pydantic = "^0.3.4"
requests = "^2.32.3"
boto3-stubs = "^1.35.80"
httpx = "^0.28.1"

[tool.poetry.scripts]
memes-api = "memes_api.__main__:cli"
memes-healthcheck = "memes_api.healthcheck:cli"

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "memes-api"
description = "A memes API"
license = "MIT"
version = "0.0.2"
authors = [
    { name = "James Hogkinson", email = "james@terminaloutcomes.com" },
]

[project.scripts]
memes-api = "memes_api.__main__:cli"
memes-healthcheck = "memes_api.healthcheck:cli"
