[tool.poetry]
name = "memes-api"
version = "0.0.3"
description = "A memes API"
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^11.1.0"
fastapi = "^0.115.8"
uvicorn = "0.34.0"
pydantic = "^2.10.6"
Jinja2 = "^3.1.5"
click = "^8.1.8"
types-Pillow = "^10.2.0"
aiobotocore = "^2.1.2"
aioboto3 = "^9.4.0"

[tool.poetry.dev-dependencies]
pylint = "^3.3.4"
pytest = "^8.3.4"
mypy = "^1.14"
black = "^25.1.0"
pylint-pydantic = "^0.3.5"
requests = "^2.32.3"
boto3-stubs = "^1.36.10"
httpx = "^0.28.1"

[tool.poetry.scripts]
memes-api = "memes_api.__main__:cli"
memes-healthcheck = "memes_api.healthcheck:cli"

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "memes-api"
description = "A memes API"
license = "MIT"
version = "0.0.2"
authors = [
    { name = "James Hogkinson", email = "james@terminaloutcomes.com" },
]

[project.scripts]
memes-api = "memes_api.__main__:cli"
memes-healthcheck = "memes_api.healthcheck:cli"
