
[project]
name = "memes-api"
description = "A memes API"
license = { text = "MPL 2.0" }
version = "0.0.5"
authors = [{ name = "James Hogkinson", email = "james@terminaloutcomes.com" }]
requires-python = "<4.0,>=3.13"
dependencies = [
    "aioboto3>=14.1.0",
    "aiobotocore>=2.21.1",
    "click>=8.1.8",
    "fastapi>=0.115.12",
    "Jinja2>=3.1.6",
    "Pillow>=11.2.1",
    "pydantic>=2.11.3",
    "types-Pillow>=10.2.0",
    "uvicorn==0.41.0",
]

[project.scripts]
memes-api = "memes_api.__main__:cli"
memes-healthcheck = "memes_api.healthcheck:cli"

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
dev = [
    "boto3-stubs>=1.37.36",
    "coverage>=7.8.0",
    "coveralls>=4.0.1",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pylint-pydantic>=0.3.5",
    "pyright>=1.1.400",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "ty>=0.0.1a15",
    "types-pillow>=10.2.0.20240822",
]


[tool.coverage.run]
omit = ["tests/*"]
